Test routing mesh with Docker EE preview

--- a/swarm-mode/Vagrantfile
+++ b/swarm-mode/Vagrantfile
@@ -6,7 +6,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.require_version ">= 1.7.4"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box          = "windows_2016_docker"
+  config.vm.box          = "windows_2016_insider"
   config.vm.communicator = "winrm"
 
   config.vm.provider "virtualbox" do |v|
@@ -50,7 +50,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.network :forwarded_port, guest: 8000, host: 8000, id: "whoami", auto_correct: true
     config.vm.provision "shell", path: "scripts/install-docker.sh", privileged: false
     config.vm.provision "shell", path: "scripts/docker-swarm-init.sh", args: "-ip #{subnet}.2"
-    config.vm.provision "shell", path: "scripts/run-visualizer.sh"
+#    config.vm.provision "shell", path: "scripts/run-visualizer.sh"
   end
 
   config.vm.define "sw-lin-02" do |config|
@@ -72,11 +72,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.network :private_network, ip: "#{subnet}.4", gateway: "#{subnet}.1"
     config.vm.provision "shell", path: "scripts/fix-second-network.ps1", privileged: false, args: "#{subnet}.4"
     config.vm.provision "shell", path: "scripts/open-swarm-mode-ports.ps1", privileged: false
-    config.vm.provision "shell", path: "scripts/update-docker-ce.ps1", privileged: false
-    config.vm.provision "shell", path: "scripts/docker-swarm-join.ps1", privileged: false, args: "-managerip #{subnet}.2 -ip #{subnet}.4"
-    # config.vm.provision "shell", path: "scripts/docker-swarm-init.ps1", privileged: false, args: "-ip #{subnet}.4"
+    config.vm.provision "shell", path: "scripts/update-docker-ee-preview.ps1", privileged: false
+#    config.vm.provision "shell", path: "scripts/update-docker-rc.ps1", privileged: false
+#    config.vm.provision "shell", path: "scripts/docker-swarm-join.ps1", privileged: false, args: "-managerip #{subnet}.2 -ip #{subnet}.4"
+     config.vm.provision "shell", path: "scripts/docker-swarm-init.ps1", privileged: false, args: "-ip #{subnet}.4"
     # at the moment we need to reboot the new swarm worker
-    config.vm.provision "reload"
+#    config.vm.provision "reload"
   end
 
   config.vm.define "sw-win-02" do |config|
@@ -84,9 +85,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.network :private_network, ip: "#{subnet}.5", gateway: "#{subnet}.1"
     config.vm.provision "shell", path: "scripts/fix-second-network.ps1", privileged: false, args: "#{subnet}.5"
     config.vm.provision "shell", path: "scripts/open-swarm-mode-ports.ps1", privileged: false
-    config.vm.provision "shell", path: "scripts/update-docker-ce.ps1", privileged: false
-    config.vm.provision "shell", path: "scripts/docker-swarm-join.ps1", privileged: false, args: "-managerip #{subnet}.2 -ip #{subnet}.5"
+    #config.vm.provision "shell", path: "scripts/update-docker-rc.ps1", privileged: false
+    config.vm.provision "shell", path: "scripts/update-docker-ee-preview.ps1", privileged: false
+#    config.vm.provision "shell", path: "scripts/docker-swarm-join.ps1", privileged: false, args: "-managerip #{subnet}.2 -ip #{subnet}.5"
     # at the moment we need to reboot the new swarm worker
-    config.vm.provision "reload"
+#    config.vm.provision "reload"
   end
 end
